# STellar-Go

./: .dockerignore  .gitignore  COMPUTE_PROTOCOL_REFACTOR.md  CONDA_COMPUTE_INTEGRATION.md  CONDA_UNIFIED_ARCHITECTURE.md  DEV.md  Dockerfile  Dockerfile.conda-test  Makefile  README.md  assets.go  bootstrappers.txt  docker-compose.conda-test.yml  docker-compose.file-test.yml  docker-compose.proxy-test.yml  docker-compose.test.yml  docker-compose.yml  environment.yaml  go.mod  go.sum
cmd/stellar/: bootstrapper.go  bootstrapper_test.go  conda.go  config.go  gui.go  key.go  key_test.go  main.go  main_test.go  node.go  node_test.go  stellar_test.go  test.go
cmd/stellar-debug-gui/: gui.go
core/conda/: conda.go  conda_test.go  infrastructure.go  infrastructure_test.go  manager.go  manager_edge_cases_test.go  (+1 more)
dcfl-client/: README.md  pyproject.toml  requirements.txt  setup.py
dcfl-client/dcfl_client/: __init__.py  client.py  exceptions.py
dcfl-client/dcfl_client/models/: __init__.py  device.py  policy.py  responses.py
dcfl-client/dcfl_client/protocols/: compute.py  echo.py  file.py  proxy.py
dcfl-client/dcfl_client/utils/: __init__.py  circuit_breaker.py  helpers.py  retry.py  socket_client.py
dcfl-client/examples/: basic_usage.py  compute_example.py  federated_learning.py  file_transfer.py  test_all.py  test_all_protocols.py  verify_node.py
dcfl-client/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_client.py  test_compute_protocol.py  test_echo_protocol.py  test_file_protocol.py  test_integration.py  test_integration_suite.py  test_performance.py  test_protocols.py  test_proxy_protocol.py
frontend/: assets.go  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: run_tests.sh
stellar-client/: README.md  pyproject.toml  setup.py
(+175 files in other folders)
